Fix up bank profit handlers and services.
